--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-drag-drop-files": "^2.3.9",
+    "react-icons": "^4.8.0",
     "react-loading-skeleton": "^3.2.0",
     "superjson": "1.9.1",
     "tailwind-merge": "^1.10.0",
